@@ -1,3 +1,4 @@
+
 # Hướng dẫn setup
 
 Theo sát các bước này để cấu hình project trên Eclipse. Các bước sau giả sử máy đích chạy trên Windows.
@@ -30,5 +31,10 @@ Nhớ đường dẫn cài đặt cho cả hai thứ.
 	 - Ô Find, tìm `fx` và Enter
 	 - Click Install e(fx)clipse bản mới nhất
 	 - Tiếp tục Confirm để tải
+ 5. Cấu hình VM:
+     - Trong Eclipse, vào Run > Run Configurations... > Java Application
+     - Chuột phải Java Application, chọn New Launch Configuration, đặt tên bất kỳ.
+     - Tab Main, đảm bảo Project được chọn là GroceryManagementProject
+     - Tab Arguments, mục VM Arguments, thêm `--module-path lib/win/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml`
 
 Các bước để cấu hình chạy SQLite sẽ được thêm sau. Lỗi inb tuấn hihi
